--- a/LittleNN/LittleNN.csproj
+++ b/LittleNN/LittleNN.csproj
@@ -7,11 +7,12 @@
     <TargetFramework>net5.0</TargetFramework>
     <Version>1.0.2.0</Version>
     <Description>Provide a neural network minimization implementation.
-All of the code is written in C#, and the project is licensed under MIT LICENSE.</Description>
+All of the code is written in C#, and the project use the MIT LICENSE.
+Get more info from repository README.</Description>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <RootNamespace>LittleNN</RootNamespace>
     <AssemblyName>LittleNN</AssemblyName>
-    <PackageReadmeFile>https://github.com/ZhangHuan0407/LittleNN/sREADME.md</PackageReadmeFile>
+    <PackageReadmeFile>README-nuget.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/ZhangHuan0407/LittleNN</RepositoryUrl>
     <PackageProjectUrl>https://github.com/ZhangHuan0407/LittleNN</PackageProjectUrl>
     <Title>LittleNN</Title>
@@ -21,6 +22,7 @@ All of the code is written in C#, and the project is licensed under MIT LICENSE.
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <PackageTags>non-native code, neural network, cpu</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -29,6 +31,10 @@ All of the code is written in C#, and the project is licensed under MIT LICENSE.
 
   <ItemGroup>
     <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README-nuget.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
