--- a/LittleNN/LittleNN.csproj
+++ b/LittleNN/LittleNN.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <Version>1.0.3.1</Version>
     <Description>Provide a neural network minimization implementation.
 All of the code is written in C#, and the project use the MIT LICENSE.
@@ -38,9 +38,6 @@ Get more info from repository README.</Description>
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="System.Memory" Version="4.5.5" />
   </ItemGroup>
   <ItemGroup>
     <None Update="UnitTest\NumberBytes\0\4658.bin">
